--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <div class="calculator-container">
      <div class ="output">  
-        <div data-previous-operand class="running-output">Hello Sean</div>
-        <div data-current-operand class="display-output">Welcome to my calculator. Smoke weed everyday.</div>
+        <div data-previous-operand class="running-output">Hello</div>
+        <div data-current-operand class="display-output">Welcome to my calculator</div>
      </div>  
     <button data-allClear id="btnac" class="span-two">AC</button>
-    <button data-delete>DEL</button>
+    <button data-delete id="del">DEL</button>
     <button data-operation id="divide">/</button>
     <button data-number id="btn7">7</button>
     <button data-number id="btn8">8</button>
